tests/sumo/output/e2/errors/pos_false/errors.sumo
Error: Attribute 'pos' in definition of e2Detector '4/1to3/1' Invalid Number Format (double) aaa.
Quitting (on error).
